# tauri-pos-app

./: .gitignore  INSTALLATION_GUIDE.md  Install-GUI.bat  MULTI_DATABASE_SETUP.md  OFFLINE-SQLITE-IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  Start Tauri POS App.lnk  TauriPosInstaller.cs  TauriPosInstaller.csproj  build-all.ps1  create-shortcut.bat  create-shortcut.ps1  init-database.ps1  install-dependencies.bat  install-tauri-pos-gui.ps1  install-tauri-pos.bat  install-tauri-pos.ps1  launch-tauri-pos.bat  package-lock.json  package.json  pos-launcher-gui.bat  pos-launcher-gui.ps1  pos-launcher-silent.bat  setup-gui.bat  setup-gui.ps1  setup.bat  setup.ps1  start-app.bat  start-tauri-with-backend-editor.ps1  start-tauri-with-backend.bat  start-tauri-with-backend.ps1  temp_app.properties
backend/: CLEANUP_SUMMARY.md  pom.xml  run-backend.bat
backend/data/: pos_local_h2.mv.db
data/: pos_local.db
dist-single-exe/: Install-TauriPOS.bat  README.md  README.txt  TauriPOS-Launcher.bat  TauriPOS-Silent.vbs  start-pos.bat
dist-single-exe/jre/: release
dist-single-exe/jre/lib/: classlist  jawt.lib  jvm.lib
dist-standalone/: install.bat  start-pos.ps1
frontend/: TAILWIND_SETUP.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: login-api.ts  sync-api.ts
frontend/src/components/: AddUserModal.tsx  DeleteUserConfirmationModal.tsx  EditUserModal.tsx  Header.tsx  NavDrawer.tsx  Navigation.tsx  OfflineStatus.tsx  PermissionRoute.tsx  (+2 more)
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: main.rs
(+179 files in other folders)
